# openvino_detect_track_car

./: CMakeLists.txt  README.md  main.cpp
vehicle-detection-adas-0002/FP16/: vehicle-detection-adas-0002.xml
